--- a/frontend/themes/baseapp/styles.css
+++ b/frontend/themes/baseapp/styles.css
@@ -1,5 +1,5 @@
 @import url('./views/main-view.css');
-@import url('./views/signin-view.css');
+@import url('./views/login-view.css');
 @import url('./views/register-view.css');
 @import url('./views/home-view.css');
 @import url('./views/hello-world-view.css');
